fix z-index on buttons

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -211,6 +211,7 @@ a {
     transition: all .25s ease;
     position: relative;
     top: 69px;
+    z-index: 2;
 }
 
 #header a.button:hover{
